--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -85,11 +85,11 @@ template(name='delta')
                                     +set_limit amount=10
                                     +set_limit amount=20
                                     +set_limit amount=50
-                        .ui.inline.small.grey.header
-                            |search
-                        .ui.small.input
-                            input(type='text' val=search_value)
-                        |&nbsp;
+                        //- .ui.inline.small.grey.header
+                        //-     |search
+                        //- .ui.small.input
+                        //-     input(type='text' val=search_value)
+                        //- |&nbsp;
                         //- &nbsp;
                         //- .ui.inline.small.grey.header view
                         //- .ui.compact.menu
