--- a/components/rentals/rental_view.jade
+++ b/components/rentals/rental_view.jade
@@ -25,7 +25,7 @@ template(name='rental_view_layout')
                         +date_view key='date_available' label='date available' icon='calendar' direct=true
                     if time_available
                         +time_view key='time_available' label='time available' icon='clock' direct=true
-                    +product_adspace
+                    //- +product_adspace
                     .ui.header 
                         |reviews
                 .eight.wide.column
