--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,11 +1,11 @@
 template(name='nav')
     unless is_frontdesk
         //- .ui.menu(class=gs.nav_color)
-        #topnav.topnav.ui.attached.borderless.menu(class=gs.nav_color)
+        #topnav.topnav.ui.attached.borderless.small.menu(class=gs.nav_color)
             if is_loading
                 .icon.item
-                    //- i.big.spinning.yin.yang.cancel.icon
-                    i.big.spinning.pulse.plus.blue.icon.cancel
+                    i.big.spinning.yin.yang.grey.cancel.icon
+                    //- i.big.spinning.pulse.plus.blue.icon.cancel
                     //- i.big.blue.spinning.pulse.plus.icon.cancel
             unless is_current_staff
                 unless is_loading
@@ -27,35 +27,16 @@ template(name='nav')
                 //-     +i name='request-service' classes='ui mini inline image'
                 //- a.ui.icon.item(href='/m/food' class="{{isActivePath '/m/food'}}" title='food')
                 //-     +i name='food' classes='ui mini inline image'
-            //- if is_current_staff
-            //-     a.ui.icon.item(href='/residents' class="{{isActivePath '/residents'}}" title='resident lookup')
-            //-         +i name='groups' classes='ui mini inline image'
-            //-         //- |residents                  
-            //-     a.ui.icon.item(href='/healthclub' class="{{isActivePath '/healthclub'}}" title='kiosk')
-            //-         +i name='android-tablet' classes='ui mini inline image'
-                    //- each role_models
-                        //-     a.item.secnavitem(href="/m/#{slug}/")
-                        //-         +i name=icon classes='ui avatar image'
-                        //-         //- i.icon(class=icon)
-                        //-         |#{title}
             
-            if is_current_resident
-                each bookmarked_models
-                    a.ui.item.set_model(href="/m/#{slug}/" title=title)
-                        +i name=icon classes='ui mini inline image'
-                a.ui.icon.item(href='/blog' class="{{isActivePath '/blog'}}")
-                    +i name='blog' classes='ui mini inline image'
-                //- a.ui.item(href='/events' class="{{isActivePath '/events'}}")
-                //-     +i name='calendar' classes='ui mini inline image'
-                //- a.ui.item(href='/shop' class="{{isActivePath '/shop'}}")
-                //-     +i name='shop' classes='ui mini inline image'
-                //- a.ui.item(href='/gallery' class="{{isActivePath '/gallery'}}")
-                //-     +i name='gallery' classes='ui mini inline image'
+            //- if is_current_resident
+            //-     each bookmarked_models
+            //-         a.ui.item.set_model(href="/m/#{slug}/" title=title)
+            //-             +i name=icon classes='ui mini inline image'
+            //-     a.ui.icon.item(href='/blog' class="{{isActivePath '/blog'}}")
+            //-         +i name='blog' classes='ui mini inline image'
             if is_current_member
                 a.ui.icon.item(href='/members' class="{{isActivePath '/members'}}")
                     +i name='groups' classes='ui mini inline image'
-                //- a.ui.icon.item(href='/work' class="{{isActivePath '/work'}}")
-                //-     +i name='tasks'
             if is_current_staff
                 a.ui.icon.item(href='/buildings' class="{{isActivePath '/buildings'}}" title='buildings')
                     +i name='building' classes='ui mini inline image'
@@ -65,9 +46,6 @@ template(name='nav')
                     +i name='user shield' classes='ui mini inline image'
                     | staff
         
-            //- .ui
-            //- a.ui.item(href='/dashboard' class="{{isActivePath '/dashboard'}}" title='storefront')
-            //-     +i name='shop' classes='ui mini inline image'                
             .right.menu
                 if is_dev
                     a.ui.icon.item(href='/dev' class="{{isActivePath '/dev'}}" title='dev')
@@ -77,11 +55,6 @@ template(name='nav')
                 if is_current_admin
                     a.ui.icon.item(href='/admin' class="{{isActivePath '/admin'}}" title='admin')
                         +i name='shield' classes='ui mini inline image'
-                        //- i.large.shield.icon
-                    //- a.ui.icon.item(href='/shop' class="{{isActivePath '/shop'}}")
-                    //-     //- +i name='shop' classes='ui mini inline image'
-                    //-     i.store.large.grey.icon
-                
                 if is_current_member
                     a.ui.icon.item(href='/karma' class="{{isActivePath '/karma'}}" title='karma')
                         +i name='yin-yang' classes='ui mini inline image'
@@ -94,7 +67,6 @@ template(name='nav')
                     //-     +i name='inbox' classes='ui mini inline image'
                     a.ui.icon.item(href='/chat' class="{{isActivePath '/chat'}}" title='chat')
                         +i name='chat' classes='ui mini inline image'
-                        //- i.chat.large.grey.outline.icon
                 if currentUser
                     unless logging_out
                         if is_member
@@ -103,7 +75,6 @@ template(name='nav')
                                     img.ui.avatar.image(src="{{c.url currentUser.profile_image_id width=100 height=100 gravity='face' crop='fill'}}")
                                 else
                                     +i name='user' classes='ui mini inline image'
-                                    //- i.user.icon
                                 .mobile.hidden #{currentUser.name}
                         else
                             a.ui.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_profile'}}")
@@ -111,7 +82,6 @@ template(name='nav')
                                     img.ui.avatar.image(src="{{c.url currentUser.profile_photo width=100 height=100 gravity='face' crop='fill'}}")
                                 else
                                     +i name='user' classes='ui mini inline image'
-                                    //- i.user.icon
                                 .mobile.hidden #{currentUser.name}
                     if logging_out
                         .ui.item
@@ -122,19 +92,8 @@ template(name='nav')
                 else
                     unless currentUser
                         a.ui.item(href='/login' title='login') 
-                            //- i.sign.in.alternate.grey.icon
-                            //- +i name='internal' classes='ui mini inline image'
+                            +i name='internal' classes='ui mini inline image'
                             |login
-        //- .ui.menu
-        //-     .ui.dropdown.item
-        //-         i.database.icon
-        //-         .menu.menuscroll
-        //-             each role_models
-        //-                 a.item.secnavitem(href="/m/#{slug}/")
-        //-                     +i name=icon classes='ui avatar image'
-        //-                     //- i.icon(class=icon)
-        //-                     |#{title}
-                    
         //- if currentUser
         //- unless is_current_staff
         //-     .ui.attached.borderless.small.menu.secnav(class=gs.nav_color)
