--- a/client/styles.css
+++ b/client/styles.css
@@ -912,7 +912,7 @@ h1.ui.header{
     display: none;
 } */
 
-/* .topnav{
+.topnav{
 	overflow-y:hidden;
 	overflow-x:scroll;
 	/*max-height:1000px;*/
@@ -925,10 +925,10 @@ h1.ui.header{
 	/* padding: 1em; */
     /* -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,.8))); */
     /* mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0)); */ */
-/* } */
+}
 
 .topnav::-webkit-scrollbar {
-    display: none;
+    height: 1px;
 }
 
 .secnav::-webkit-scrollbar {
