--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -260,13 +260,15 @@ template(name='user_info')
 
 
 template(name='username_info')
-    a.ui.small.compact.basic.button(href="/user/#{user.username}/")
-        if user.kiosk_photo
+    .ui.small.compact.basic.button.goto_profile
+        if is_member
+            img.ui.tiny.image(src="{{c.url user.profile_image_id width=100 height=100}}")
+        else if user.kiosk_photo
             img.ui.avatar.image(src="{{c.url user.kiosk_photo width=100 height=100}}")
         else if user.image_id
             img.ui.avatar.image(src="{{c.url user.image_id width=100 height=100}}")
-        |#{user.first_name} #{user.last_name}
-        |@#{user.username}
+        |#{user.name}
+        //- |@#{user.username}
         +user_status user
 
 
