--- a/components/profile/member_profile.jade
+++ b/components/profile/member_profile.jade
@@ -59,64 +59,50 @@ template(name='member_profile_layout')
                             each roles
                                 .ui.basic.label #{this}
                 .twelve.wide.column.shadowed-box
-                    if is_staff
-                        if user_is_resident
-                            a.ui.button(href="/member/#{username}/healthclub" class="{{isActiveRoute 'user_healthclub'}}")
-                                +ismall name='treadmill' classes='ui inline image'
-                                |healthclub
                     if is_member
-                        a.ui.compact.button(href="/member/#{username}/dashboard" class="{{isActiveRoute 'user_dashboard'}}")
+                        a.ui.compact.button(href="/member/#{username}/dashboard" class="{{isActiveRoute 'member_dashboard'}}")
                             +ismall name='dashboard' classes='ui inline image'
                             |dashboard
-                        a.ui.compact.button(href="/member/#{username}/about" class="{{isActiveRoute 'user_about'}}")
+                        a.ui.compact.button(href="/member/#{username}/about" class="{{isActiveRoute 'member_about'}}")
                             +ismall name='info' classes='ui inline image'
                             |info
-                        a.ui.compact.button(href="/member/#{username}/social" class="{{isActiveRoute 'user_social'}}")
+                        a.ui.compact.button(href="/member/#{username}/social" class="{{isActiveRoute 'member_social'}}")
                             +ismall name='collaboration' classes='ui inline image'
                             |social
-                        a.ui.compact.button(href="/member/#{username}/gallery" class="{{isActiveRoute 'user_gallery'}}")
-                            +ismall name='gallery' classes='ui inline image'
-                            |gallery
-                        a.ui.compact.button(href="/member/#{username}/connections" class="{{isActiveRoute 'user_connections'}}")
+                        a.ui.compact.button(href="/member/#{username}/connections" class="{{isActiveRoute 'member_connections'}}")
                             +ismall name='handshake' classes='ui inline image'
                             |connections
-                        a.ui.compact.button(href="/member/#{username}/bookmarks" class="{{isActiveRoute 'user_bookmarks'}}")
+                        a.ui.compact.button(href="/member/#{username}/bookmarks" class="{{isActiveRoute 'member_bookmarks'}}")
                             +ismall name='star' classes='ui inline image'
                             |bookmarks
-                        a.ui.compact.button(href="/member/#{username}/contact" class="{{isActiveRoute 'user_contact'}}")
+                        a.ui.compact.button(href="/member/#{username}/contact" class="{{isActiveRoute 'member_contact'}}")
                             +ismall name='phone' classes='ui inline image'
                             |contact
-                        a.ui.compact.button(href="/member/#{username}/events" class="{{isActiveRoute 'user_events'}}")
-                            +ismall name='calendar' classes='ui inline image'
-                            |calendar
-                        a.ui.compact.button(href="/member/#{username}/comparison" class="{{isActiveRoute 'user_comparison'}}")
+                        a.ui.compact.button(href="/member/#{username}/comparison" class="{{isActiveRoute 'member_comparison'}}")
                             +ismall name='scales' classes='ui inline image'
                             |comparison
-                        a.ui.compact.button(href="/member/#{username}/offers" class="{{isActiveRoute 'user_offers'}}")
+                        a.ui.compact.button(href="/member/#{username}/offers" class="{{isActiveRoute 'member_offers'}}")
                             +ismall name='sell' classes='ui inline image'
                             |offers
-                        a.ui.compact.button(href="/member/#{username}/tags" class="{{isActiveRoute 'user_tags'}}")
+                        a.ui.compact.button(href="/member/#{username}/tags" class="{{isActiveRoute 'member_tags'}}")
                             +ismall name='tags' classes='ui inline image'
                             |tags
-                        a.ui.compact.button(href="/member/#{username}/tasks" class="{{isActiveRoute 'user_tasks'}}")
-                            +ismall name='tasks' classes='ui inline image'
-                            |tasks
-                        a.ui.compact.button(href="/member/#{username}/messages" class="{{isActiveRoute 'user_messages'}}")
+                        a.ui.compact.button(href="/member/#{username}/messages" class="{{isActiveRoute 'member_messages'}}")
                             +ismall name='new-message' classes='ui inline image'
                             |mail
-                        a.ui.compact.button(href="/member/#{username}/karma" class="{{isActiveRoute 'user_karma'}}")
+                        a.ui.compact.button(href="/member/#{username}/karma" class="{{isActiveRoute 'member_karma'}}")
                             +ismall name='yin-yang' classes='ui inline image'
                             |karma
-                        a.ui.compact.button(href="/member/#{username}/workhistory" class="{{isActiveRoute 'user_workhistory'}}")
+                        a.ui.compact.button(href="/member/#{username}/workhistory" class="{{isActiveRoute 'member_workhistory'}}")
                             +ismall name='resume' classes='ui inline image'
                             |work history
-                        a.ui.compact.button(href="/member/#{username}/stats" class="{{isActiveRoute 'user_stats'}}")
+                        a.ui.compact.button(href="/member/#{username}/stats" class="{{isActiveRoute 'member_stats'}}")
                             +ismall name='line-chart' classes='ui inline image'
                             |stats
-                        a.ui.compact.button(href="/member/#{username}/votes" class="{{isActiveRoute 'user_votes'}}")
+                        a.ui.compact.button(href="/member/#{username}/votes" class="{{isActiveRoute 'member_votes'}}")
                             +ismall name='elections' classes='ui inline image'
                             |votes
-                        a.ui.compact.button(href="/member/#{username}/notifications" class="{{isActiveRoute 'user_notifications'}}")
+                        a.ui.compact.button(href="/member/#{username}/notifications" class="{{isActiveRoute 'member_notifications'}}")
                             +ismall name='appointment-reminders' classes='ui inline image'
                             |notifications
                         div
